# nsi-dds-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  dds_proxy.env  pyproject.toml  renovate.json
.github/workflows/: container.yml  lint.yml  test.yml
artwork/: dual-ingress-auth.md
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
dds_proxy/: auth.py  config.py  dds_client.py  main.py  models.py  routers.py
dds_proxy/routers/: sdps.py  stps.py  switching_services.py  topologies.py
tests/: __init__.py  conftest.py  test_auth.py  test_dds_client.py  test_health_check_filter.py  test_models.py  test_root_path.py  test_routes.py  test_ssl_context.py
