[project]
name = "dds-proxy"
version = "0.1.1.dev1"
description = "REST proxy for the NSI Document Distribution Service."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["NSI", "DDS", "NML", "network"]
authors = [
    {name = "Hans Trompert", email = "hans.trompert@surf.nl"},
]
maintainers = [
    {name = "Hans Trompert", email = "hans.trompert@surf.nl"},
]
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.1",
    "httpx==0.28.1",
    "lxml==6.0.2",
    "pydantic-settings==2.13.1",
    "structlog==25.5.0",
    "uvicorn==0.41.0",
]

[project.urls]
Homepage = "https://github.com/workfloworchestrator/nsi-dds-proxy"
Issues = "https://github.com/workfloworchestrator/nsi-dds-proxy/issues"

[tool.setuptools.packages.find]
include = ["dds_proxy*"]

[project.scripts]
dds-proxy = "dds_proxy.main:run"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx==0.28.1",
    "mypy==1.19.1",
    "ruff==0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs= true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = [
]

[[tool.mypy.overrides]]
module = [
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "A",    # Builtins
    "B",    # Bugbear
    "C4",   # Comprehensions
    "D",    # Docstrings
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "G",    # Logging format
    "I",    # Isort
    "ISC",  # Implicit string concat
    "S",    # Bandit
    "T20",  # Print
    "W",    # pycodestyle Warning
    # "UP",   # Pyupgrade
]

# Match flake8-docstrings default behavior
pydocstyle.convention = "google" # or "numpy" / "pep257"
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "venv",
    ".venv",
]
ignore = [
    "D100",
    "D104",
    "T201",
    "S101",
]

per-file-ignores = { "tests/**" = ["D101", "D102", "D103"] }
